objects/VisitReportOppty__c.object
<CustomObject>
    <description>SFDP-265: Created. This serves as the junction between Visit Reports and Opportunities. It is linked as Master Detail to both Opportunity and Account.</description>
    <fields>
        <fullName>OpportunityName__c</fullName>
        <formula>Opportunity__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <description>SFDP-265: Created.</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Related Visit Reports</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PrimaryQuoteId__c</fullName>
        <formula>Opportunity__r.SBQQ__PrimaryQuote__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Quote Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <formula>VisitReport__r.Subject__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subject</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <formula>TEXT(VisitReport__r.Type__c)</formula>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitDate__c</fullName>
        <formula>VisitReport__r.Visit_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Visit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VisitReport__c</fullName>
        <label>Visit Report</label>
        <referenceTo>VisitReport__c</referenceTo>
        <relationshipLabel>Visit Report Opportunities</relationshipLabel>
        <relationshipName>VisitReportOpportunities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Visit Report Opportunity</label>
    <nameField>
        <displayFormat>VRO-{0}</displayFormat>
        <label>Relationship Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Visit Report Opportunities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>